fixed junit tests
Issue #718